# DEPRECATED_afb-controller

./: .gitmodules
conf.d/cmake/: config.cmake
conf.d/project/json.d/: control-daemon-sample.json  onload-daemon-sample.json
conf.d/project/lua.d/: onload-daemon-01-init.lua  onload-daemon-03-controls.lua  onload-daemon-10-timer.lua
ctl-binding/: CMakeLists.txt  ctrl-binding.c  ctrl-binding.h
ctl-plugin/: CMakeLists.txt  plug-capi-sample.c  plug-lua2c-sample.c
htdocs/: index.html
nbproject/: configurations.xml  project.xml
